--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
-@'
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+
+# Virtual envs
 .venv/
 venv/
-.env
+env/
+
+# OS / editor
 .DS_Store
-'@ | Set-Content -Encoding UTF8 .\.gitignore
+Thumbs.db
+.vscode/
+.idea/
+
+# Logs / temp
+*.log
